# robotic_arm

./: .gitignore  README.md  setup_simple_arm.sh
src/simple_arm_description/: CMakeLists.txt  package.xml
src/simple_arm_description/config/: controllers.yaml
src/simple_arm_description/launch/: sim_arm.launch.py
src/simple_arm_description/models/box/: model.config  model.sdf
src/simple_arm_description/models/crate/: model.config  model.sdf
src/simple_arm_description/models/cube/: model.config  model.sdf
src/simple_arm_description/models/ground_plane/: model.config  model.sdf
src/simple_arm_description/models/sun/: model.config  model.sdf
src/simple_arm_description/src/: control_arm.py
src/simple_arm_description/urdf/: simple_arm.urdf.xacro
src/simple_arm_description/worlds/: simple_world.sdf
